--- a/Project 09/Prototype/petswala/pubspec.yaml
+++ b/Project 09/Prototype/petswala/pubspec.yaml
@@ -34,6 +34,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   google_fonts: ^2.0.0
+  toggle_switch: ^1.3.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
