--- a/Project 09/Prototype/petswala/pubspec.yaml
+++ b/Project 09/Prototype/petswala/pubspec.yaml
@@ -29,8 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   sqflite: null
-  cloud_firestore: ^2.5.4
-  firebase_auth: ^3.1.4
+#  cloud_firestore: ^2.5.4
+#  firebase_auth: ^3.1.4
 
 dev_dependencies:
   flutter_test:
