--- a/Project 09/Prototype/petswala/pubspec.yaml
+++ b/Project 09/Prototype/petswala/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.9.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -30,12 +30,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   sqflite: null
   cloud_firestore: ^2.5.4
-  firebase_auth: ^3.1.4
+  mongo_dart: ^0.4.3
+  sevr: ^1.0.4
+  dio: ^3.0.10
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  google_fonts: ^2.0.0
+  google_fonts: ^1.1.2 #Important
   toggle_switch: ^1.3.0
   animated_splash_screen: ^1.1.0
 
